# urg_dora

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  README_ja.md  apache-arrow-apt-source-latest-jammy.deb
cmake/: DoraTargets.cmake  patch_dora_build_rs.cmake
config/: urg_dora.yaml
dataflow/: urg_dora.yaml
include/urg_dora/: config.hpp  time_sync.hpp  urg_dora_node.hpp
src/: config.cpp  main.cpp  time_sync.cpp  urg_dora_node.cpp
tests/: config_test.cpp  time_sync_test.cpp
